# toy-reality

./: .gitignore  CMakeLists.txt  README.md  build.sh  setup.sh
.github/workflows/: ci.yml
cmake/: ToyARConfig.cmake.in
shaders/: background.frag  background.vert  basic.frag
tests/: CMakeLists.txt  test_core.cpp  test_math.cpp
toyar/include/: ar_camera.h  ar_core.h  ar_error.h  ar_gui.h  ar_la.h  ar_lighting.h  ar_motion_tracking.h  ar_object.h  ar_occlusion.h  ar_plane.h  ar_plane_detection.h  ar_resource.h  ar_scene.h  ar_scene_modern.h
toyar/src/: ar_camera.cpp  ar_core.cpp  ar_error.cpp  ar_gui.cpp  ar_la.cpp  ar_lighting.cpp  ar_motion_tracking.cpp  ar_object.cpp  ar_occlusion.cpp  ar_plane.cpp  ar_plane_detection.cpp  ar_resource.cpp  ar_scene.cpp  ar_scene_modern.cpp  main.cpp
